# Distributed-routing-using-MIS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
cmake/: CompilerSettings.cmake
include/MISDistributedRouting/: config.h
include/MISDistributedRouting/algorithm/: MIS_graph.h  MIS_node.h
include/MISDistributedRouting/core/: graph.h  inbox.h  message.h  message_box.h  node.h  types.h
include/MISDistributedRouting/graph/: graph.h  node.h
include/MISDistributedRouting/logger_adapters/: message_logger.h  timer_wrapper.h
include/MISDistributedRouting/messaging/: message.h
include/MISDistributedRouting/simulation/: eucledian_trait.h  simulation_edge.h  simulation_graph.h  simulation_node.h  simulation_utils.h  simulation_window.h  simulator.h  unit_connectivity.h
include/MISDistributedRouting/utils/: log_macros.h  logger.h  profiling.hpp  thread_pool.h
src/: CMakeLists.txt  cmakelists.txt  main.cpp
src/algorithm/: CMakeLists.txt  MIS_graph.cpp  MIS_node.cpp  cmakelists.txt
src/core/: CMakeLists.txt  cmakelists.txt  graph.cpp  inbox.cpp  message_box.cpp  node.cpp
src/graph/: cmakelists.txt  graph.cpp  node.cpp
src/messaging/: cmakelists.txt  inbox.cpp
src/simulation/: CMakeLists.txt  cmakelists.txt  simulation_graph.cpp  simulation_node.cpp  simulation_window.cpp  simulator.cpp
src/utils/: CMakeLists.txt  cmakelists.txt  logger.cpp  thread_pool.cpp
tests/: CMakeLists.txt  cmakelists.txt  test_main.cpp
